# nous-bot

./: .gitignore  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 20241215_0100_c088303dcd2f_initial_migration.py
src/: __init__.py
src/core/: __init__.py  client.py  config.py  exceptions.py  loader.py  process_manager.py
src/llm/: __init__.py  core.py  events.py  personality.py
src/llm/memory/: short_term.py
src/llm/providers/: base.py  groq.py
src/llm/routing/: base.py  intent_router.py
src/llm/tools/: discord_api.py  examples.py  registry.py
src/modules/chat/: __init__.py  core.py  events.py
src/modules/chat/memory/: short_term.py
src/services/: __init__.py  base.py  factory.py  interface.py  manager.py  registry.py
src/services/cache/: __init__.py  interface.py  main.py  redis.py
src/services/database/: __init__.py  base.py  interface.py  main.py  manager.py  session.py
src/services/database/models/: base.py  user.py
src/services/database/repositories/: base.py  user.py
src/services/llm/: __init__.py  factory.py  service.py
src/services/llm/providers/: base.py  google.py
src/services/redis/: __init__.py  interface.py  service.py
src/utils/: __init__.py  factory.py  logging.py  rate_limiter.py
