[tool.poetry]
name = "nous"
version = "0.1.0"
description = ""
authors = ["anthoeknee <pacyheb@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
discord-py = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
