[tool.poetry]
name = "nous"
version = "0.1.0"
description = ""
authors = ["anthoeknee <pacyheb@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
discord-py = "^2.4.0"
pydantic-settings = "^2.7.0"
watchdog = "^6.0.0"
groq = "^0.13.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
